# Real-Time-Object-Recognition-System

./: CMakeLists.txt  README.md
data/: embedding_database.csv  object_database.csv
include/: classifier.h  database.h  embedding.h  features.h  filter.h  kmeans.h  morphology.h  segmentation.h  threshold.h
src/: classifier.cpp  database.cpp  embedding.cpp  evaluate.cpp  evaluateEmbedding.cpp  features.cpp  filter.cpp  kmeans.cpp  morphology.cpp  objectRecognition.cpp  segmentation.cpp  threshold.cpp  train.cpp  trainEmbedding.cpp
visualization/: run_visualizations.py  visualize_embedding.py  visualize_handcrafted.py
